--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Betheme-coffee-clone by Addisu Motora",
+  "short_name": "react app",
   "name": "Betheme-coffee-clone by Addisu Motora",
   "icons": [
     {
